--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,19 @@
 spring.aop.proxy-target-class=false
+
+autoload.cache.config.namespace=test
+
+
+#datasource
+spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/client_upgrade?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
+spring.datasource.druid.username=
+spring.datasource.druid.password=
+spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+
+#mybatis see org.mybatis.spring.boot.autoconfigure.MybatisProperties
+mybatis.configuration.cacheEnabled=false
+mybatis.configuration.default-statement-timeout=5
+mybatis.mapperLocations: classpath:mybatis/*.xml
+
 #redis cluster see org.springframework.boot.autoconfigure.data.redis.RedisProperties
 spring.redis.cluster.nodes[0]=10.7.100.95\:7000
 spring.redis.cluster.nodes[1]=10.7.100.95\:7001
