--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,10 +4,10 @@ autoload.cache.config.namespace=test
 
 
 #datasource
-spring.datasource.druid.url=jdbc:mysql://10.7.100.97:3306/client_upgrade?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
-spring.datasource.druid.username=
-spring.datasource.druid.password=
-spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db_users;MODE=MYSQL;INIT=RUNSCRIPT FROM './src/test/resources/init_table.sql'
+spring.datasource.username=
+spring.datasource.password=
 
 #mybatis see org.mybatis.spring.boot.autoconfigure.MybatisProperties
 mybatis.configuration.cacheEnabled=false
@@ -15,15 +15,17 @@ mybatis.configuration.default-statement-timeout=5
 mybatis.mapperLocations: classpath:mybatis/*.xml
 
 #redis cluster see org.springframework.boot.autoconfigure.data.redis.RedisProperties
-spring.redis.cluster.nodes[0]=10.7.100.95\:7000
-spring.redis.cluster.nodes[1]=10.7.100.95\:7001
-spring.redis.cluster.nodes[2]=10.7.100.95\:7002
-spring.redis.cluster.nodes[3]=10.7.100.95\:7003
-spring.redis.cluster.nodes[4]=10.7.100.97\:7000
-spring.redis.cluster.nodes[5]=10.7.100.97\:7001
-spring.redis.cluster.nodes[6]=10.7.100.97\:7002
-spring.redis.cluster.nodes[7]=10.7.100.97\:7003
-spring.redis.cluster.maxRedirects=10
+#spring.redis.cluster.nodes[0]=10.7.100.95\:7000
+#spring.redis.cluster.nodes[1]=10.7.100.95\:7001
+#spring.redis.cluster.nodes[2]=10.7.100.95\:7002
+#spring.redis.cluster.nodes[3]=10.7.100.95\:7003
+#spring.redis.cluster.nodes[4]=10.7.100.97\:7000
+#spring.redis.cluster.nodes[5]=10.7.100.97\:7001
+#spring.redis.cluster.nodes[6]=10.7.100.97\:7002
+#spring.redis.cluster.nodes[7]=10.7.100.97\:7003
+#spring.redis.cluster.maxRedirects=10
+spring.redis.host=192.168.176.131
+spring.redis.port=6379
 
 #redis pool
 spring.redis.pool.maxWait=1500
