--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
       <version>4.0.38</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
