--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
-spring.aop.proxy-target-class=false
+spring.aop.proxy-target-class=true
 
-autoload.cache.config.namespace=test
+autoload.cache.config.namespace=autoload-cache-test
 autoload.cache.enable=true
 
 
@@ -25,7 +25,7 @@ mybatis.mapperLocations: classpath:mybatis/*.xml
 #spring.redis.cluster.nodes[6]=10.7.100.97\:7002
 #spring.redis.cluster.nodes[7]=10.7.100.97\:7003
 #spring.redis.cluster.maxRedirects=10
-spring.redis.host=192.168.176.131
+spring.redis.host=172.16.60.189
 spring.redis.port=6379
 
 #redis pool
