--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,8 @@
-spring.aop.proxy-target-class=true
+spring.aop.proxy-target-class=false
 
 autoload.cache.config.namespace=autoload-cache-test
 autoload.cache.enable=true
-
+autoload.cache.proxy-target-class=true
 
 #datasource
 spring.datasource.driverClassName=org.h2.Driver
@@ -29,7 +29,7 @@ spring.redis.host=172.16.60.189
 spring.redis.port=6379
 
 #redis pool
-spring.redis.pool.maxWait=1500
-spring.redis.pool.maxActive=2048
-spring.redis.pool.minIdle=20
-spring.redis.pool.maxIdle=200
+spring.redis.jedis.pool.maxWait=1500
+spring.redis.jedis.pool.maxActive=2048
+spring.redis.jedis.pool.minIdle=20
+spring.redis.jedis.pool.maxIdle=200
