--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.qiujiayu</groupId>
   <artifactId>autoload-cache-spring-boot-starter</artifactId>
-  <version>6.9.6</version>
+  <version>7.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>spring-boot-autoload-cache-starter</name>
   <description>autoload-cache spring boot starter.</description>
@@ -31,7 +31,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
-    <autoload-cache.version>6.9.6</autoload-cache.version>
+    <autoload-cache.version>7.0.0-SNAPSHOT</autoload-cache.version>
     <spring-boot.version>1.5.9.RELEASE</spring-boot.version><!-- 2.0.3.RELEASE -->
   </properties>
 
