--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -9,17 +9,23 @@ spring:
     url: jdbc:h2:mem:db_users;MODE=MYSQL;INIT=RUNSCRIPT FROM './src/test/resources/init_table.sql'
     username: ''
   redis:
-#    host: 127.0.0.1
-#    port: 6379
-    cluster:
-      max-redirects: 10
-      nodes:
-      - 192.168.176.128:7001
-      - 192.168.176.128:7002
-      - 192.168.176.129:7001
-      - 192.168.176.129:7002
-      - 192.168.176.130:7001
-      - 192.168.176.130:7002
+    host: 192.168.176.131
+    port: 6379
+#    cluster:
+#      max-redirects: 10
+#      nodes:
+#      - 192.168.176.128:7001
+#      - 192.168.176.128:7002
+#      - 192.168.176.129:7001
+#      - 192.168.176.129:7002
+#      - 192.168.176.130:7001
+#      - 192.168.176.130:7002
+    lettuce:
+      pool:
+        maxActive: 2048
+        maxIdle: 200
+        maxWait: 1500ms
+        minIdle: 20
     jedis:
       pool:
         maxActive: 2048
