--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.qiujiayu</groupId>
   <artifactId>autoload-cache-spring-boot-starter</artifactId>
-  <version>7.0.2-1</version>
+  <version>7.0.3</version>
   <packaging>jar</packaging>
   <name>spring-boot-autoload-cache-starter</name>
   <description>autoload-cache spring boot starter.</description>
@@ -31,7 +31,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
-    <autoload-cache.version>7.0.2</autoload-cache.version>
+    <autoload-cache.version>7.0.3</autoload-cache.version>
   </properties>
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -49,7 +49,6 @@
       <artifactId>spring-boot-autoconfigure</artifactId>
       <optional>true</optional>
     </dependency>
-    
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-aspects</artifactId>
@@ -65,7 +64,7 @@
       <artifactId>aspectjweaver</artifactId>
       <optional>true</optional>
     </dependency>
-    <!-- 
+    <!--
     <dependency>
       <groupId>cglib</groupId>
       <artifactId>cglib</artifactId>
@@ -76,12 +75,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
       <optional>true</optional>
-      <exclusions>
-        <exclusion>
-          <groupId>io.lettuce</groupId>
-          <artifactId>lettuce-core</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.lettuce</groupId>
@@ -91,6 +84,12 @@
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-pool2</artifactId>
+      <version>2.4.2</version>
       <optional>true</optional>
     </dependency>
     <!-- @ConfigurationProperties annotation processing (metadata for IDEs) -->
@@ -134,6 +133,13 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <scope>compile</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.33</version>
       <scope>compile</scope>
       <optional>true</optional>
     </dependency>
