--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 sudo: required
 language: java
+jdk:
+  - openjdk8
 
 install:
-  - jdk_switcher use oraclejdk8
   - mvn clean install -DskipTests
 
